<resources>
    <string name="app_name">Assignment</string>
    <string name="convert">Convert</string>
    <string name="from">From</string>
    <string name="calc">Calculate</string>
    <string name="to">To</string>
    <string name="from_desc">The value to convert.</string>
    <string name="clear">Clear</string>
    <string name="insert">Insert New Data</string>
    <string name="insert_type">Insert Type</string>
    <string name="insert_button">Insert</string>
    <string name="category_name">Category Name</string>
    <string name="empty_string" />
    <string name="unit_name">Unit Name</string>
    <string name="category">Category</string>
    <string name="unit_suffix">Unit Suffix</string>
    <string name="unit_1">Unit 1</string>
    <string name="unit_2">Unit 2</string>
    <string name="conversion_factor">Conversion Factor</string>
</resources>
