<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/catText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAlignment="center" />

        <Spinner android:id="@+id/activityInsertCategorySpinner" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/unitNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/unitNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/unitSuffixText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_suffix"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/unitSuffixEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/btnInsertCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_button"
            android:layout_span="2"/>
    </TableRow>
</TableLayout>